# Hipforge

./: .dev_setup.sh  .env  .env.example  .gitignore  Dockerfile.sandbox  README.md  README_DEMO.md  demo_test.sh  docker-compose.yml  opencode.json  setup.ps1  setup.py  setup.sh
.agent/: AGENT_RULES.md  ARCHITECTURE_LOCK.md  DEBUGGING_PROMPTS.md  IMPLEMENTATION_ORDER.md  IMPLEMENTATION_PROMPTS.md  MOCK_SERVICES.md  PROJECT_CONTEXT.md  SESSION_STATE.json
backend/: Dockerfile  requirements.txt
backend/app/: diagnostics.py  main.py
benchmarks/: README.md
benchmarks/level1_core_cuda/: CMakeLists.txt  README.md  metadata.json
benchmarks/level1_core_cuda/include/hipforge_level1/: cuda_check.hpp  kernels.cuh
benchmarks/level1_core_cuda/src/: level1_kernels.cu  main.cu
benchmarks/level2_advanced_runtime/: CMakeLists.txt  README.md  metadata.json
benchmarks/level2_advanced_runtime/include/hipforge_level2/: advanced_kernels.cuh  runtime.hpp
benchmarks/level2_advanced_runtime/src/: advanced_kernels.cu  main.cu
benchmarks/level3_modern_cuda_cpp/: CMakeLists.txt  README.md  metadata.json
benchmarks/level3_modern_cuda_cpp/include/hipforge_level3/: runtime.hpp  tensor.hpp
benchmarks/level3_modern_cuda_cpp/src/: main.cu  modern_kernels.cu
benchmarks/level4_multifile_system/: CMakeLists.txt  README.md  metadata.json
benchmarks/level4_multifile_system/include/hipforge_level4/config/: build_config.cuh
benchmarks/level4_multifile_system/include/hipforge_level4/detail/: error.hpp
benchmarks/level4_multifile_system/include/hipforge_level4/launch/: launcher.hpp
benchmarks/level4_multifile_system/include/hipforge_level4/math/: vector_ops.cuh
benchmarks/level4_multifile_system/include/hipforge_level4/utils/: init.h
benchmarks/level4_multifile_system/src/app/: main.cu
benchmarks/level4_multifile_system/src/core/: cross_file_kernels.cu  macro_kernels.cu
benchmarks/level4_multifile_system/src/utils/: init.cpp
benchmarks/level5_production_algorithms/: CMakeLists.txt  README.md  metadata.json
benchmarks/level5_production_algorithms/include/hipforge_level5/: algorithms.cuh  runtime.hpp
benchmarks/level5_production_algorithms/src/: algorithms.cu  main.cu
benchmarks/level6_extreme_migration_stress/: CMakeLists.txt  README.md  metadata.json
cli/: __init__.py  hipforge.py
docs/: 00_SYSTEM_SPECIFICATION.md  01_PRODUCT_VISION.md  02_SYSTEM_ARCHITECTURE.md  03_PROJECT_STRUCTURE.md  04_TECHNOLOGY_DECISIONS.md  05_USER_FLOW.md  06_WORKSPACE_ARCHITECTURE.md  07_WORKFLOW_ENGINE.md  08_REDIS_ARCHITECTURE.md  09_AI_AGENTS.md  10_COMPILATION_PIPELINE.md  11_RESEARCH_AGENT.md  12_MIGRATION_JOURNAL.md  13_BACKEND.md  14_FRONTEND.md  15_DOCKER_SETUP.md  16_API_SPECIFICATION.md  17_REPORT_GENERATOR.md  18_OBSERVABILITY.md  19_SECURITY.md  20_TESTING.md  21_DEPLOYMENT.md  22_INCIDENT_RESPONSE.md  23_MONITORING.md  24_SCALABILITY.md  25_DISASTER_RECOVERY.md  26_JOB_LIFECYCLE.md  27_MAINTENANCE.md  28_COMPLIANCE.md  30_IMPLEMENTATION_TRACKER.md  31_DEMO_SCRIPT.md  32_STARTUP_ROADMAP.md  AMD_COMPUTE_USAGE.md  ARCHITECTURE.md  DEPENDENCIES.md  FRESH_MACHINE_RUNBOOK.md  HIPIFY_RECOVERY_FIX.md  Inconsistencies and Terminology Conflicts.md  MOCK_VS_REAL.md  NOTEBOOKLM_CONTEXT.md  (+1 more)
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: CompilerLog.tsx  Footer.tsx  Navbar.tsx  ThemeProvider.tsx  Timeline.tsx  UploadCard.tsx
frontend/hooks/: useWebSocket.ts
frontend/services/: api.ts
frontend/styles/: globals.css
frontend/types/: migration.ts
scripts/: stress_test.py  test_demo.py
tests/: conftest.py
tests/backend/: conftest.py  test_ai_repair_quality.py  test_analysis_agent.py  test_architecture_advisor.py  test_ast_slicing.py  test_base_agent.py  test_diagnostics.py  test_download.py  test_hipcc_runner.py  test_hipify_runner.py  test_history_service.py  test_integration_generated_makefile.py  test_journal_service.py  test_launcher_hardening.py  test_lesson_storage.py  test_makefile_generator.py  test_migration_api.py  test_migration_hardening.py  test_parity.py  test_patch_agent.py  test_patch_applier.py  test_patch_safety.py  test_pipeline_states.py  test_ponytail_fixes.py  test_project_scanner.py  test_real_validation_regression.py  test_redis_manager.py  test_sca.py  (+10 more)
(+87 files in other folders)
